[package]
name = "rstbrun"
version = "0.1.1"
edition = "2021"
authors = ["Benjamin Blase"]
description = "Build and run Rstb tests with Icarus Verilog"
readme = "README.md"
repository = "https://github.com/benbr8/rstbrun"
license = "GPL-2.0"
keywords = ["eda", "verilog"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
fancy-regex = "0.7.1"
toml = "0.5.8"
serde = "1.0.131"
serde_derive = "1.0.131"